# evrythng-freertos-sdk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  demo.sh  evrythng-demo.c  evrythng-freertos-cli.c  makefile  run.sh
FreeRTOSV8.2.1/PosixPort/GCC/Posix/: port.c  portmacro.h
FreeRTOS_Posix/: FreeRTOSConfig.h
FreeRTOS_Posix/AsyncIO/: AsyncIOSocket.c  PosixMessageQueueIPC.h
FreeRTOS_Posix/FileIO/: fileIO.c
FreeRTOS_Posix/FreeRTOS_Kernel/portable/GCC/Posix/: port.c
Posix_GCC_Simulator/: Readme.txt
Posix_GCC_Simulator/FreeRTOS_Posix/: .cproject  FreeRTOSConfig.h  main.c
Posix_GCC_Simulator/FreeRTOS_Posix/AsyncIO/: AsyncIOSocket.h  PosixMessageQueueIPC.c
Posix_GCC_Simulator/FreeRTOS_Posix/Debug/: subdir.mk
Posix_GCC_Simulator/FreeRTOS_Posix/Debug/AsyncIO/: subdir.mk
Posix_GCC_Simulator/FreeRTOS_Posix/Debug/Common_Demo/Full/: subdir.mk
Posix_GCC_Simulator/FreeRTOS_Posix/Debug/Common_Demo/Minimal/: subdir.mk
Posix_GCC_Simulator/FreeRTOS_Posix/Debug/FileIO/: subdir.mk
Posix_GCC_Simulator/FreeRTOS_Posix/Debug/FreeRTOS_Kernel/: subdir.mk
Posix_GCC_Simulator/FreeRTOS_Posix/Debug/FreeRTOS_Kernel/portable/GCC/Posix/: subdir.mk
Posix_GCC_Simulator/FreeRTOS_Posix/Debug/FreeRTOS_Kernel/portable/MemMang/: subdir.mk
Posix_GCC_Simulator/FreeRTOS_Posix/Debug/ParTest/: subdir.mk
Posix_GCC_Simulator/FreeRTOS_Posix/Release/: makefile  sources.mk  subdir.mk
Posix_GCC_Simulator/FreeRTOS_Posix/Release/AsyncIO/: subdir.mk
Posix_GCC_Simulator/FreeRTOS_Posix/Release/evrythng/: subdir.mk
Posix_GCC_Simulator/FreeRTOS_Posix/Release/mqtt/: subdir.mk
Posix_GCC_Simulator/FreeRTOS_Posix/evrythng/: evrythng.c  evrythng.h
Posix_GCC_Simulator/FreeRTOS_Posix/mqtt/src/: LinkedList.c  MQTTClient.c  MQTTPacket.h  Thread.c  marvell_api.h
apps/demo/: CMakeLists.txt  demo.c  demo.sh
apps/tests/: CMakeLists.txt  main.c
cmake/: FreeRTOSV8.2.1.cmake  evrythng.cmake  freertos.cmake  mqtt.cmake  tests.cmake  toolchainfile.cmake
evrythng/: evrythng.c  evrythng.h  platform.h
evrythng/tests/: CMakeLists.txt  tests.c
libs/FreeRTOSV8.2.1/: CMakeLists.txt
libs/FreeRTOSV8.2.1/PosixPort/: FreeRTOSConfig.h
libs/FreeRTOSV8.2.1/PosixPort/GCC/Posix/: port.c
libs/evrythng/: CMakeLists.txt
libs/evrythng/platform/FreeRTOS_POSIX/: freertos_posix.c  platform_types.h  types.h
libs/evrythng/platform/POSIX/: posix.c
misc/: Doxyfile
mqtt/src/: MQTTClient.c  MQTTPacket.h  MQTTProtocolClient.c  SSLSocket.c  Socket.c
